# plex-postgresql

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.standalone  INSTALL.md  MIGRATION_PLAN.md  Makefile  README.de.md  README.eo.md  README.es.md  README.ga.md  README.md  README.nl.md  RELEASE_NOTES.md  TRANSLATOR_TEST_TAGS.md  build_shim_musl.sh  cbindgen.toml  docker-compose.standalone.yml  docker-compose.yml  megadebug.md
.githooks/: pre-push
rust/plex-pg-core/: Cargo.toml  build.rs
rust/plex-pg-core/benches/: bench_cache.rs  bench_core.rs  bench_libpq.rs  bench_micro.rs  bench_pipeline.rs  bench_shim.rs  bench_translation.rs
rust/plex-pg-core/src/: byte_utils.rs  c_abi.rs  db_interpose_bind.rs  db_interpose_column.rs  db_interpose_column_badcast.rs  db_interpose_column_decltype.rs  db_interpose_common.rs  db_interpose_conn_utils.rs  db_interpose_exec.rs  db_interpose_helpers.rs  db_interpose_helpers_tests.rs  db_interpose_metadata.rs  db_interpose_open.rs  db_interpose_prepare.rs  db_interpose_prepare_helpers.rs  db_interpose_prepare_utils.rs  db_interpose_step.rs  db_interpose_step_cached_read_utils.rs  db_interpose_step_read_utils.rs  db_interpose_step_write_utils.rs  db_interpose_stmt_lifecycle.rs  db_interpose_trace_helpers.rs  db_interpose_txn_utils.rs  db_interpose_value.rs  db_interpose_value_helpers.rs  dedup.rs  emit.rs  env_utils.rs  exception_what.rs  ffi.rs  ffi_types.rs  fishhook.rs  functions.rs  groupby.rs  keywords.rs  keywords_tests.rs  lib.rs  libpq_helpers.rs  pg_client.rs  pg_client_config.rs  (+22 more)
(+397 files in other folders)
