[package]
name = "plex-pg-core"
version = "1.1.0"
edition = "2021"
build = "build.rs"

[features]
interpose = []

[lib]
name = "plex_pg_core"
crate-type = ["lib", "staticlib"]

[[bin]]
name = "sqlite_compat_harness"
path = "src/bin/sqlite_compat_harness.rs"
test = false

[[bin]]
name = "exception_parity_test"
path = "src/bin/exception_parity_test.rs"
test = false

[dependencies]
sqlparser = { version = "0.61", features = ["serde"] }
serde_json = "1"
libc = "0.2"
postgres = "0.19"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[[bench]]
name = "bench_translation"
harness = false
path = "benches/bench_translation.rs"

[[bench]]
name = "bench_micro"
harness = false
path = "benches/bench_micro.rs"

[[bench]]
name = "bench_shim"
harness = false
path = "benches/bench_shim.rs"

[[bench]]
name = "bench_cache"
harness = false
path = "benches/bench_cache.rs"

[[bench]]
name = "bench_libpq"
harness = false
path = "benches/bench_libpq.rs"

[[bench]]
name = "bench_pipeline"
harness = false
path = "benches/bench_pipeline.rs"

[[bench]]
name = "bench_core"
harness = false
path = "benches/bench_core.rs"
